# rish-harmonize

./: .gitignore  README.md  pyproject.toml  workflow.md
examples/ds005664/: run_pipeline_test.sh  test_signal_sh.py  test_signal_sh.sh
examples/ds005664/pipeline_test/glm_test/: example_manifest.csv  run_glm_test.sh
examples/openneuro-multisite/: README.md
examples/ukb/: README.md  config.sh  config_bunya.sh  run_fa_template.sh  run_fod_template.sh  run_ukb_rish_glm.sh  setup_bunya.sh  submit_fa_pipeline.slurm  submit_fod_pipeline.slurm  test_new_features_bunya.sh
src/rish_harmonize/: __init__.py
src/rish_harmonize/cli/: main.py
src/rish_harmonize/core/: covariates.py  harmonize.py  rish.py  rish_glm.py  scale_maps.py  sh_fitting.py  shells.py
src/rish_harmonize/io/: mrtrix_io.py  participants.py
src/rish_harmonize/qc/: glm.py  site_effects.py  subject_qc.py  visualize.py
tests/integration/: conftest.py  test_harmonization_efficacy.py  test_rish_glm_pipeline.py  test_signal_pipeline.py
tests/unit/: test_cli.py  test_harmonize.py  test_rish_glm.py  test_sh_fitting.py  test_shells.py
